Fix adjusting volume for default device

Using WAVE_MAPPER device id (which points to default device)
is not possible to get and initialize a mixer object to set volume.

Function mixerGetID() does not support WAVE_MAPPER as a device id yet.

Since we do not know device number anymore
needs to call waveInOpen() first and after that
initialize mixer controls using hWaveIn handler.

- Fixed default volume from 0.0f -> 1.0f.
- Before QWindowsAudioInput::start() is called, use cached volume.
- After QWindowsAudioInput::start(), mixer controls are initialized.
- QWindowsAudioInput::stop() deinitializes mixer controls.

Task-number: QTBUG-61920
Change-Id: I5a94dad282618fb4a2e0f75c34008ca002bd1aeb
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>